Fix canvas goin off screen

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ canvas {
 /* TODO make this responsive design */
 canvas {
     width: 80%;
+    max-width: 80%;
 }
 #data_display_wrapper {
     width: 20%;
